--- a/friends.css
+++ b/friends.css
@@ -1,3 +1,24 @@
 #Friends {
 	font-size: 30px;
 }
+img {
+	width: 300px;
+	border: 1px solid black;
+
+}
+.imagetext {
+	position: absolute;
+	top: 10px;
+   left: 0; 
+   width: 100%; 
+   display: none;
+}
+
+.imagerep{
+	position: relative;
+	display: inline;
+}
+
+.imagerep:hover .imagetext {
+	display: block;
+}
