I MADE THE NAV BAR GO RIGHT!

--- a/faraway.css
+++ b/faraway.css
@@ -18,6 +18,13 @@ p {
 	color: white !important;
 }
 
+li{
+	font-family: 'Roboto', sans-serif;
+	color: purple !important;
+	margin: 10px;
+
+}
+
 body{
 	color: grey !important;
 }
@@ -30,21 +37,17 @@ h2{
 
 .sidenav{
 	 list-style-type: none !important;
-    margin: 0;
+    margin-left: 950px;
     padding: 0;
     position: absolute;
-    width: 100px;
+    width: 150px;
     background-color: #f1f1f1;
-    border: 1px solid #555;
-    float: right;
+    
+    float: right !important;
+    height: 75%; /* Full height */
+    position: fixed; /* Make it stick, even on scroll */
+    overflow: auto;
 }
 
-.snav {
-	display: block;
-    color: #000;
-    padding: 8px 16px;
-    width: 60px;
-    float: right;
-    text-align: center;
-}
+
 
