--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
 	background-color: #d3d3d3 !important;
 }
 
-h1 {font-family: 'Happy Monkey', cursive;
+h1 {font-family: 'Happy Monkey', cursive !important;
 	color: #5C246E;
 	text-align: center;
 }
