made faraway and home page fonts dosis

--- a/home.css
+++ b/home.css
@@ -16,6 +16,6 @@ img {
 
 p {
 	margin-left: 10px;
-	font-family: 'Roboto', sans-serif;
-	color: white !important;
+	font-size: 20px;
+	font-family: 'Dosis', sans-serif;
 }
