--- a/faraway.css
+++ b/faraway.css
@@ -14,8 +14,8 @@
 
 p {
 	margin-left: 10px;
-	font-family: 'Roboto', sans-serif;
-	color: white !important;
+	font-size: 20px;
+	font-family: 'Dosis', sans-serif;
 }
 
 li{
