--- a/friends.css
+++ b/friends.css
@@ -1,10 +1,13 @@
+body {
+    margin-top: 40px;
+    border: 20px;
+}
 h2 {font-family: 'Happy Monkey', cursive;
     color: #5C246E;
     text-align: left;
-    bottom: 10px; 
     left: 20px; 
     color: white !important;
-    position: absolute;
+    
 }
 
 #Friends {
@@ -15,12 +18,9 @@ img {
 	border: 1px solid black;
 
 }
-.imagetext {
-	position: absolute;
-	top: 10px;
-   left: 0; 
+p {
    width: 100%; 
-   display: none;
+   color: white !important;
 }
 
 .imagerep{
@@ -28,10 +28,9 @@ img {
 	display: inline;
 	height: 220px;
 	padding: 10px;
-
 }
 
 .row{
-	padding-bottom: 20px;
+    padding-top: 20px;
 }
 
