--- a/friends.css
+++ b/friends.css
@@ -1,6 +1,6 @@
 body {
-    margin-top: 40px;
-    border: 20px;
+    margin-top: 150px;
+    margin-left: 50px;
 }
 h2 {font-family: 'Happy Monkey', cursive;
     color: #5C246E;
