fixed nav bar/site heading
made it look the same positioning across all the pages

--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ ul.topnav li {
   /* add back section padding value */
   padding: .25rem 9999rem;
 }
+
+.topnav{
+	margin: 27px;
+}
 a.sitelink:link
 {
    color: #5C246E;
